Vehicle & some fix
